--- a/A4part2.Rmd
+++ b/A4part2.Rmd
@@ -1,15 +1,11 @@
-############################################################################################
-#course:  Time Series Analysis, T-862-TIMA
-#Date:    //2014
-#Students: Daniel Bergmann Sigtryggsson, Lilja Bjorg Gudmundsdottir, Jon Vilberg Georgsson 
-#
-############################################################################################
+---
+title: "Assignment 4, part2"
+author: "Lilja Bjorg, Jón Vilberg, Daníeln  Bergmann"
+date: "Wednesday, November 12, 2014"
+output: html_document
+---
 
-# ---------------- PART 2 ----------------
-
-# Na i gogn i Makka
-# dat <- rbind(read.csv2("Elspot2013.csv",encoding = "UTF-8"),read.csv2("Elspot2014forMac.csv",encoding = "UTF-8"))
-# Na i gogn i Windows
+```{r}
 dat <- rbind(read.csv2("Elspot2013.csv",encoding = "UTF-8"),read.csv2("Elspot2014.csv",encoding = "UTF-8"))
 dat$Time <- seq(as.POSIXct(as.character(dat$Date[1]),format="%e.%m.%Y",tz="CET")+3600,by=3600,length.out=nrow(dat))
 dat$Hours <- as.numeric(dat$Hours)
@@ -46,8 +42,7 @@ pacf(dat$Price)
 nSampYear= 8759
 #nSampYear = 4000
 nSamp = 1000
-#mdl <- lm(rep(1,(nSamp-168)) ~ dat$Wind[169:nSamp] +
-#Xvar = data.frame(price = dat$Price, W169 = dat$Wind,L169=dat$Consumption,P168=lag(dat$Price,1),P145=lag(dat$Price,24),P1=lag(dat$Price,168))
+
 Xvar2013 = data.frame(price = dat$Price[169:(nSamp)], 
                       W169 = dat$Wind[169:nSamp],
                       L169=dat$Consumption[169:nSamp],
@@ -55,7 +50,7 @@ Xvar2013 = data.frame(price = dat$Price[169:(nSamp)],
                       P145=dat$Price[145:(nSamp-24)],
                       P1=dat$Price[1:(nSamp-168)])
 mdl2013 <- lm(price ~ W169+L169+P168+P145+P1,data=Xvar2013,x=T,y=T)
-Y =  dat$Price[169:nSampYear]
+Y = dat$Price[169:nSampYear]
 acf(mdl2013$residuals)
 pacf(mdl2013$residuals)
 #XX = as.matrix(mdl$x)
@@ -70,7 +65,9 @@ P0 = rep(1,(nSampYear-168))
 err = c(mdl2013$residuals, rep(0,(length(Pt)-length(mdl2013$residuals))))
 err = as.numeric(err)
 XX = cbind(P0,Wt,Lt,Pt168,Pt24,Pt1,err)
-
+```
+Fall sem gerir recursive parametric estimate
+```{r}
 recurse_est = function(XX,Y,lmbd){
   # Initialize-a th?etu, sem 0 vigur
   theta = matrix(0,7,1)
@@ -79,23 +76,19 @@ recurse_est = function(XX,Y,lmbd){
   n = nrow(XX)-1
   # Initialize empty matix and vector for storing
   theta.store <- matrix(NA,nrow(XX),7)
-  #det.store = matrix(NA,nrow(XX),1)
+  det.store = matrix(NA,nrow(XX),1)
   yhat <- rep(NA,nrow(XX))
-  tt=2
-  Y[2] = NA
   # gera recursive:
   # for t = 169:n
   for(tt in 2:n){  
     
     xt <- XX[tt,]
+    if(is.na(Y[tt]){ #for future predictions
+      Y[tt]=Y[tt-1]
+    } 
     #Update Rt
     Rt <- xt%*%t(xt) + lmbd*Rt
-    if(length(Y) < ncol(XX)){
-    if(is.na(Y[tt])){
-      Y[tt]=Y[tt-1]
-    }
-    }
-    #det.store[tt] = det(Rt)
+    det.store[tt] = det(Rt)
     # Use "try" until Rt becomes invertible
     theta.try <- try(theta + solve(Rt)%*%xt%*%(Y[tt] - t(xt)%*%theta),silent=T)
     if(class(theta.try) != "try-error"){
@@ -111,10 +104,13 @@ recurse_est = function(XX,Y,lmbd){
   yhat[yhat > 600]= 600
   return(yhat)  
 }
+```
+Fall sem reiknar root mean square error
+```{r}
 RMSE = function(sim,obs){
   RMSE = mean( (sim[!is.na(sim)] - obs[!is.na(sim)])^2)
 }
-layout(1)
+layout(1:1)
 
 lambda = 0.3
  y = NA
@@ -123,10 +119,12 @@ while(lambda <= 1){
   y = c(y,RMSE(y_mdl,Y))
   lambda = lambda + 0.05
 }
-barplot(y[2:length(y)],ylab="RMSE",xlab="lambda, 0.3 to 1 increments of 0.05", col=2,main="simulation for different lambdas")
+barplot(y[2:length(y)],ylab="RMSE",xlab="lambda, 0.3 to 1 increments of 0.05", col=2,main="simulation for different lambdas" )
 grid()
-#Looks as though no forgetting factor gives least RMSE, going for 0.8 because it is plausible that it will improve the model
+```
 
+Looks as though no forgetting factor gives least RMSE, going for 0.55 because it is plausible that it will improve the model
+```{r}
 nSamp = 1000
 nSampYear = length(dat2014$Price)-168
 Xvar = data.frame(price = dat2014$Price[169:(nSamp)], 
@@ -147,9 +145,12 @@ P0 = rep(1,(nSampYear-168))
 err = c(mdl2014$residuals, rep(0,(length(Pt)-length(mdl2014$residuals))))
 err = as.numeric(err)
 XX = cbind(P0,Wt,Lt,Pt168,Pt24,Pt1,err)
-forecast_xx = matrix(rep(XX[6817,],times=13),nrow=13,ncol=7,byrow=T) # increase XX dimension into future
+```
+increase XX dimension into future
+```{r}
+forecast_xx = matrix(rep(XX[6817,],times=13),nrow=13,ncol=7,byrow=T) # i
 XX = rbind(XX, forecast_xx)
-yhat2014 = ts(recurse_est(XX,Y,0.8),start=c(2014,1),frequency=24*365)
+yhat2014 = ts(recurse_est(XX,Y,0.55),start=c(2014,1),frequency=24*365)
 plot(yhat2014[(length(yhat2014)-100):length(yhat2014)] ,
      type='l',col=2,ylab="Spot Price")
 lines(yhat2014[(length(yhat2014)-13):length(yhat2014)] ,
@@ -157,5 +158,6 @@ lines(yhat2014[(length(yhat2014)-13):length(yhat2014)] ,
 grid()
 
 (prediction = yhat2014[(length(yhat2014)-12):length(yhat2014)])
-#Obviously there is an bug in the code that does not allow for future predited values. Theory is that the Rt matrix is not singular
 
+```
+Obviously there is an bug in the code that does not allow for future predited values. Theory is that the Rt matrix is not singular
